# ECT60ctrl

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  armhf.cmake  main.c  remotedbg.sh  servo_gui.c  servo_gui.h
doc/: task_sequence.puml
